[gd_scene load_steps=5 format=3 uid="uid://0x30u3drfr0v"]

[ext_resource type="Script" uid="uid://bf6bnr5sfwh6b" path="res://scripts/reward_option.gd" id="1_iaep2"]
[ext_resource type="Texture2D" uid="uid://5ddiap7ujcfi" path="res://assets/sprites/cool_fish.png" id="1_ry3jo"]
[ext_resource type="LabelSettings" uid="uid://br2rr3gvloa36" path="res://assets/styles/labels/default_text_style.tres" id="2_iaep2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ry3jo"]
bg_color = Color(0.429372, 0.540495, 0.6, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.594414, 0.733059, 0.8, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0.737961, 0.883982, 1, 0.6)

[node name="RewardOption" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_iaep2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -300.0
offset_right = 175.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ry3jo")

[node name="Button" type="Button" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="MarginContainer" type="MarginContainer" parent="Panel/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -27.0
offset_right = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Button/MarginContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Panel/Button/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
texture = ExtResource("1_ry3jo")
expand_mode = 3
stretch_mode = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/Button/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 5.0
theme_override_constants/separation = 10
alignment = 1

[node name="Control2" type="Control" parent="Panel/Button/MarginContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Label_Title" type="Label" parent="Panel/Button/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "{Reward Title}"
label_settings = ExtResource("2_iaep2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Panel/Button/MarginContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="AttributesContainer" type="VBoxContainer" parent="Panel/Button/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label_Health" type="Label" parent="Panel/Button/MarginContainer/VBoxContainer/VBoxContainer2/AttributesContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Health: 1 (-)"
label_settings = ExtResource("2_iaep2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_Attack" type="Label" parent="Panel/Button/MarginContainer/VBoxContainer/VBoxContainer2/AttributesContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Attack: 3 (+2)"
label_settings = ExtResource("2_iaep2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_Speed" type="Label" parent="Panel/Button/MarginContainer/VBoxContainer/VBoxContainer2/AttributesContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Speed: 2 (+1)"
label_settings = ExtResource("2_iaep2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_Description" type="Label" parent="Panel/Button/MarginContainer/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit"
label_settings = ExtResource("2_iaep2")
horizontal_alignment = 1
autowrap_mode = 1

[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
